@@ -1,7 +1,0 @@
-<?php
-### CLASSES ###
-require_once( "classes/tweets.php" );
-
-$account = new Tweets( "1" );
-$account->tweet();
-?>
