@@ -11,7 +11,11 @@ ToDo List
         * dyrki.* (?)
     * Create endyrki for english related tweet
 
-Version dev-4.x
+Version dev-4.x (expected 27/02/2012)
+	* Removed all files from 1.x
+	* Removed all files from 2.x
+	* Removed all unused files
+	* Create a folder in 'class' for each wiki
 
 Version 3.1 (19/02/2012)
     * Improve bitly script output
